--- a/src/style.scss
+++ b/src/style.scss
@@ -31,10 +31,14 @@ h2 {
 }
 
 .contact-box {
-    margin: 30px 0 50px 0;
+    margin: 30px 0 30px 0;
 
     .mail {
         margin: 0 0 3px 0;
         font-size: 3em;
     }
+}
+
+.works-box {
+    margin: 30px 0 50px 0;
 }
